<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books Inventory</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit a book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating the book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book">Book</string>

    <!-- Label for Supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Product Name*</string>

    <!-- Text hint for book price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price (euro)*</string>

    <!-- Text hint for book quantity in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity*</string>

    <!-- Text hint for supplier's name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier\'s name*</string>

    <!-- Text hint for supplier's phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone_number">Supplier\'s Phone Number*</string>

    <!-- Text for Dummy Data "Product name" field in the editor [CHAR LIMIT=30] -->
    <string name="dummy_product_name">BookX</string>

    <!-- Text for Dummy Data "Price" field in the editor [CHAR LIMIT=30] -->
    <string name="dummy_price_value">10</string>

    <!-- Text for Dummy Data "Quantity" field in the editor [CHAR LIMIT=30] -->
    <string name="dummy_quantity_value">1</string>

    <!-- Text for Dummy Data "Supplier name" field in the editor [CHAR LIMIT=30] -->
    <string name="dummy_supplier_name">SupplierX</string>

    <!-- Text for Dummy Data "Supplier phone" field in the editor [CHAR LIMIT=30] -->
    <string name="dummy_supplier_phone_number">+491005222</string>

    <!-- Title text for the empty view, which describes the empty book image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no articles in the inventory…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- List item caption text label for line 1 [CHAR LIMIT=50] -->
    <string name="list_item_caption_line_1_label">Price:&#160;</string>

    <!-- List item caption text label for the second line [CHAR LIMIT=50] -->
    <string name="list_item_caption_line_2_label">Quantity:&#160;</string>

    <!-- List item caption text label for button -->
    <string name="list_item_button_label">Sale</string>

    <!-- Editor activity button label -->
    <string name="editor_activity_button_label">Order</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting the book</string>

    <!-- Toast message in editor when book has failed to be saved [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving the book</string>

    <!-- Toast message in editor when book has been saved successfully [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when book has no supplier phone number and the button ORDER
      is clicked [CHAR LIMIT=NONE] -->
    <string name="toast_message_order_button_phone_empty">Please enter a phone number to make a call</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Content description for the empty view image [CHAR LIMIT=30] -->
    <string name="empty_view_image_content_description">Empty view image</string>

    <!-- Editor activity caption for required fields [CHAR LIMIT=50] -->
    <string name="caption_edit_text_field">* Required</string>
</resources>