<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hint_book_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/hint_book_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/hint_book_quantity"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="sale"/>

</LinearLayout>